wwwroot/css/site.css
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

html {
    position: relative;
    min-height: 100%;
}
/*
body {
    margin-bottom: 60px;
}
body.theme-0 {
    transition: background 2s;
    background-color: #ffffff;
}
body.theme-1 {
    transition: background 2s;
    background-color: #212529;
    color: white !important;
}
*/
 
.lgimg {
    transition: all 0.4s ease-in;
}

.lgimg:hover {
    transform: scale(1.15);
    transition: all 0.3s ease-in;
}

#scrollBtn {
    display: none; /* Hidden by default */
    position: fixed; /* Fixed/sticky position */
    bottom: 20px; /* Place the button at the bottom of the page */
    right: 30px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    cursor: pointer; /* Add a mouse pointer on hover */
    padding: 15px; /* Some padding */
}    
.space
{
    height: 50px;
}
/*
footer.theme-0
{
    
}
footer.theme-1
{
    background-color: black !important;
    color: #ffbf80 !important;
    
}
footer.theme-1 a:link, footer.theme-1 a:visited
{
    color: #66d9ff !important;
}
.menu
{
    bacground-color: black !important;
    color: white !important;
}
body.theme-1 a:link a:visited
{
    color: #66d9ff !important;
}
*/
 

